Operator basic example

--- a/basicStarter.html
+++ b/basicStarter.html
@@ -12,7 +12,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit totam placeat est ullam debitis laborum.</p>
 
 
-    <script src="./script_concatenation.js"></script>
+    <script src="./script_operator.js"></script>
 </body>
 
 </html>
